--- a/other/index_backup5.html
+++ b/other/index_backup5.html
@@ -25,104 +25,15 @@
 }
 
 *{box-sizing:border-box}
-body {
-  margin: 0;
-  min-height: 100vh;
-  position: relative;
-  color: var(--text);
-  background: linear-gradient(180deg, rgba(7,12,29,1), rgba(11,16,32,1) 70%);
-  overflow-x: hidden;
+body{
+  margin:0;
+  background:linear-gradient(180deg,#070c1d,#0b1020 70%);
+  color:var(--text);
 }
-
-body::before{
-  content: "";
-  position: fixed;
-  inset: 0;
-  z-index: -3;
-  pointer-events: none;
-
-  background-image:
-    radial-gradient(40vw 30vw at 10% 20%, rgba(124,58,237,0.14), transparent 40%),
-    radial-gradient(50vw 36vw at 75% 10%, rgba(34,211,238,0.12), transparent 45%),
-    radial-gradient(36vw 26vw at 40% 80%, rgba(59,130,246,0.10), transparent 48%),
-    radial-gradient(28vw 18vw at 85% 70%, rgba(236,72,153,0.06), transparent 60%);
-
-  filter: blur(60px) saturate(110%);
-  mix-blend-mode: screen;
-  opacity: 0.95;
-}
-
-body::after{
-  content: "";
-  position: fixed;
-  inset: 0;
-  z-index: -2;
-  pointer-events: none;
-
-  /* Multi-layer starfield with different scales + offsets */
-  background-image:
-    radial-gradient(circle at 12% 23%, rgba(255,255,255,0.9) 1px, transparent 1.5px),
-    radial-gradient(circle at 77% 64%, rgba(255,255,255,0.8) 1px, transparent 1.6px),
-    radial-gradient(circle at 33% 81%, rgba(255,255,255,0.6) 0.8px, transparent 1.4px),
-    radial-gradient(circle at 58% 14%, rgba(255,255,255,0.7) 0.9px, transparent 1.5px),
-
-    radial-gradient(circle, rgba(255,255,255,0.9) 1px, transparent 1.5px),
-    radial-gradient(circle, rgba(255,255,255,0.7) 0.9px, transparent 1.4px),
-    radial-gradient(circle, rgba(255,255,255,0.5) 0.7px, transparent 1.2px);
-
-  background-size:
-    300px 300px,
-    420px 420px,
-    560px 560px,
-    380px 380px,
-    140px 140px,
-    220px 220px,
-    90px 90px;
-
-  background-position:
-    13px 29px,
-    211px 97px,
-    87px 341px,
-    173px 61px,
-    0 0,
-    120px 200px,
-    45px 78px;
-
-  opacity: 0.95;
-  filter: brightness(105%) contrast(110%);
-  mix-blend-mode: screen;
-}
-
-/* Tutoring Section Styles */
-
-.tutoring-box {
-    background: linear-gradient(135deg, #2b2f77, #1b9aaa); /* eye-catching colors */
-    border-radius: 18px;
-    padding: 1.8rem 2rem;
-    margin: 2.5rem 0;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
-}
-
-.tutoring-title {
-    font-family: 'Forte', cursive;
-    font-size: 48px;  /* adjust if needed */
-    color: #ffffff;
-    margin-top: 0;
-}
-
-.tutoring-box p,
-.tutoring-box li {
-    color: #f2f6ff; /* text color for readability */
-}
-
-
-
 .site{
   max-width:var(--max-width);
   margin:32px auto;
   padding:20px;
-  position: relative;
-  z-index: 0;
 }
 a{color:var(--accent);text-decoration:none}
 a:hover{text-decoration:underline}
@@ -179,68 +90,57 @@ h2{margin:0 0 20px 0}
 .section{margin-bottom:64px}
 
 /* ================= TIMELINE ================= */
-.timeline {
-  position: relative;
-  padding-left: 28px; /* space for line + balls */
+.timeline{
+  position:relative;
+  padding-left:36px;
 }
-
-.timeline::before {
-  content: "";
-  position: absolute;
-  left: 8px; /* center of line */
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background: rgba(255,255,255,.15);
+.timeline::before{
+  content:"";
+  position:absolute;
+  left:12px;
+  top:0;
+  bottom:0;
+  width:2px;
+  background:rgba(255,255,255,.15);
 }
-
-.timeline-item {
-  position: relative;
-  margin-bottom: 32px;
-  opacity: 0;
-  transform: translateY(24px);
-  transition: opacity .6s ease, transform .6s ease;
-  cursor: pointer;
+.timeline-item{
+  position:relative;
+  margin-bottom:32px;
+  opacity:0;
+  transform:translateY(24px);
+  transition:opacity .6s ease, transform .6s ease;
+  cursor:pointer;
 }
-
-.timeline-item.visible {
-  opacity: 1;
-  transform: none;
+.timeline-item.visible{
+  opacity:1;
+  transform:none;
 }
-
-.timeline-item::before {
-  content: "";
-  position: absolute;
-  left: 0;       /* exactly on the line */
-  top: 50%;      /* center vertically relative to card */
-  transform: translate(-50%, -50%); /* center dot horizontally and vertically */
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  background: var(--accent);
-  z-index: 1;
+.timeline-item::before{
+  content:"";
+  position:absolute;
+  left:-26px;
+  top:10px;
+  width:14px;
+  height:14px;
+  border-radius:50%;
+  background:var(--accent);
 }
-
-.timeline-card {
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: var(--radius-md);
-  padding: 16px 16px 16px 36px; /* space from line */
-  position: relative;
+.timeline-card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-md);
+  padding:16px;
 }
-
-.timeline-header {
-  display: flex;
-  align-items: center;
-  gap: 14px;
+.timeline-header{
+  display:flex;
+  align-items:center;
+  gap:14px;
 }
-
-.timeline-header img {
-  width: 48px;
-  height: 48px;
-  object-fit: contain;
+.timeline-header img{
+  width:48px;
+  height:48px;
+  object-fit:contain;
 }
-
 
 /* Publications timeline logos */
 .timeline-item.publication .timeline-header img {
@@ -250,7 +150,7 @@ h2{margin:0 0 20px 0}
 }
 
 
-.meta{font-size:15px;color:var(--muted)}
+.meta{font-size:13px;color:var(--muted)}
 .timeline-card p{margin:8px 0 0}
 
 /* ================= TIMELINE EXPANDABLE ================= */
@@ -311,26 +211,6 @@ h2{margin:0 0 20px 0}
 
 
 /* ================= CONTACT ================= */
-
-/* Make user-typed text in inputs and textarea white */
-form input,
-form textarea {
-    color: #ffffff;
-}
-
-/* Make placeholder text white (optional: slightly lighter) */
-form input::placeholder,
-form textarea::placeholder {
-    color: #ffffff;
-    opacity: 0.7;
-}
-
-/* Make contact info gray text white */
-.contact-item span {
-    color: #ffffff;
-}
-
-
 .contact-grid{
   display:grid;
   grid-template-columns:1fr 380px;
@@ -352,9 +232,7 @@ form textarea::placeholder {
   align-items:center;
   margin-bottom:12px;
 }
-
-.contact-item strong{font-weight:600; color: #ffffff}
-
+.contact-item strong{font-weight:600}
 .btn{
   display:inline-flex;
   align-items:center;
@@ -384,7 +262,7 @@ form textarea::placeholder {
   color: var(--accent);
   padding: 6px 10px;
   border-radius: 8px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 500;
 }
 
@@ -420,7 +298,7 @@ form textarea{min-height:120px}
     <div class="avatar-fallback" style="display:none">GM</div>
     <div>
       <h1>Gustavo Pinho Maia</h1>
-      <div class="role">PhD student in Chemistry (Astrobiology); Organic Chemistry Tutor </div>
+      <div class="role">PhD student in Chemistry (Astrobiology)</div>
       <p>
         Research on mechanochemical and shock-driven synthesis of organic molecules
         relevant to prebiotic chemistry and the origin of life.
@@ -834,84 +712,38 @@ form textarea{min-height:120px}
       </div>
     </div>
 
-    <!-- Publication 3 -->
-    <div class="timeline-item publication">
-      <div class="timeline-card">
-        <div class="timeline-header">
-          <div>
-            <strong>Da Química Bioinorgânica para a Química Prebiótica: Levar Mais Longe o Legado do Prof. Fraústo da Silva</strong>
-            <div class="meta">
-              Ana Franco, Gustavo P. Maia and José Armando Luísa da Silva · 2024 · SPQ - Sociedade Portuguesa de Química
-            </div>
-          </div>
-        </div>
-        <p><em>Click to view abstract</em></ps>
-      </div>
-      <div class="timeline-expand">
-        <div class="expand-body">
-          <p> From Bioinorganic Chemistry to Prebiotic Chemistry: Taking the Legacy of Prof. Fraústo da Silva. Professor Fraústo da Silva played a
-              decisive role in the introduction in Portugal,as well as in the development worldwide, ofBioinorganic Chemistry. This text identifies
-              some of his contributions in this field, as well as developments by other authors on topics related to Bioinorganic Chemistry
-              (with emphasis on the iron-sulphur and boron systems), which can support new approaches in Prebiotic Chemistry.</p>
-          <p><a href="https://doi.org/10.52590/M3.P708.A30002745" target="_blank" rel="noopener noreferrer"><strong>DOI: 10.52590/M3.P708.A30002745</strong></a></p>
-        </div>
-      </div>
-    </div>
-
     <!-- Dynamically loaded BibTeX publications will be appended here -->
     <div id="pub-list"></div>
 
   </div>
 </section>
 
+<!-- CONTACT -->
+<section class="section">
+<h2>Contact</h2>
+<div class="contact-grid">
 
-<!-- TUTORING + CONTACT -->
-<section class="section" id="tutoring">
-  <div class="tutoring-box">
-    <div class="tutoring-title-wrapper" style="display:flex; align-items:center; justify-content:space-between;">
-  <h2 style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;">Cientifica(mente)</h2>
-  <img src="images/portugal.png" alt="Portugal Flag" style="width:60px; height:auto; border-radius:6px;">
-</div>
-
-    
-    <p>
-      <strong>Química não precisa de ser decorada — precisa de ser compreendida.</strong>  
-    </p>
-    <p>
-      A minha abordagem centra‑se em ajudar os alunos a entenderem verdadeiramente como e porquê as reações químicas acontecem, desenvolvendo o bom senso químico essencial para pensar e raciocinar como um químico. O percurso começa pelos fundamentos da química, abordando ligações químicas, estrutura molecular e a relação entre estrutura e propriedade, e evolui de forma lógica para a estereoquímica e para os principais tipos de reações em química orgânica, como substituições, eliminações e adições.
-      As aulas são personalizadas às necessidades de cada aluno, promovendo o pensamento crítico, a curiosidade científica e uma compreensão sólida e duradoura da matéria, com impacto direto no desempenho académico e na confiança perante a disciplina.
-    </p>
-
-     <div class="keywords" style="margin-top:30px">
-      <span>Química Geral </span>
-      <span>Química Orgânica </span>
-      <span>Escrita Cientifica </span>
-    </div>
-
-    <p style="font-family: 'Forte', cursive; color: #a0e4f0; font-size: 2.2em; margin-top:24px">
-      Precisas de ajuda? Fala comigo!
-    </p>
-
-    <!-- CONTACT INSIDE TUTORING -->
-    <div class="contact-grid" style="margin-top:2rem; display:grid; grid-template-columns:1fr; gap:20px;">
-      <div class="card">
-        
-          <form id="contactForm" onsubmit="return handleContact(event)">
-          <input id="name" placeholder="Your name" required>
-          <input id="email" type="email" placeholder="Your email" required>
-          <input id="subject" placeholder="Subject" required>
-          <textarea id="message" placeholder="Message" required></textarea>
-          <div style="margin-top:10px;display:flex;gap:10px">
-            <button class="btn" type="submit">Send</button>
-            <button class="btn ghost" type="button" onclick="this.form.reset()">Clear</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
+<div class="card">
+  <div class="contact-item">
+    <strong>Email:</strong> <span id="emailValue">gustavopinho.maia(at)mnhn.fr</span>
   </div>
-</section>
 
+  <div style="display:flex;gap:10px;margin-bottom:16px">
+    <button class="btn" id="copyEmailBtn">Copy email</button>
+    <a class="btn ghost" id="downloadVcard" download="gustavo_maia.vcf">Download vCard</a>
+  </div>
+
+  <form id="contactForm" onsubmit="return handleContact(event)">
+    <input id="name" placeholder="Your name" required>
+    <input id="email" type="email" placeholder="Your email" required>
+    <input id="subject" placeholder="Subject" required>
+    <textarea id="message" placeholder="Message" required></textarea>
+    <div style="margin-top:10px;display:flex;gap:10px">
+      <button class="btn" type="submit">Send</button>
+      <button class="btn ghost" type="button" onclick="this.form.reset()">Clear</button>
+    </div>
+  </form>
+</div>
 
 </div>
 </section>
@@ -977,11 +809,11 @@ fetch("publications.bib")
   const container = document.getElementById("pub-list");
 
   entries.forEach(e => {
-    const title = (e.match(/title\s*=\s*[{\"]([^}\"]+)/i) || [])[1];
-    const author = (e.match(/author\s*=\s*[{\"]([^}\"]+)/i) || [])[1];
-    const year = (e.match(/year\s*=\s*[{\"]([^}\"]+)/i) || [])[1];
-    const doi = (e.match(/doi\s*=\s*[{\"]([^}\"]+)/i) || [])[1];
-    const abstract = (e.match(/abstract\s*=\s*[{\"]([^}\"]+)/i) || [])[1] || "";
+    const title = (e.match(/title\s*=\s*[{"]([^}"]+)/i) || [])[1];
+    const author = (e.match(/author\s*=\s*[{"]([^}"]+)/i) || [])[1];
+    const year = (e.match(/year\s*=\s*[{"]([^}"]+)/i) || [])[1];
+    const doi = (e.match(/doi\s*=\s*[{"]([^}"]+)/i) || [])[1];
+    const abstract = (e.match(/abstract\s*=\s*[{"]([^}"]+)/i) || [])[1] || "";
 
     if(!title) return;
 
@@ -1025,7 +857,7 @@ function escapeHtml(str){
     .replace(/&/g, "&amp;")
     .replace(/</g, "&lt;")
     .replace(/>/g, "&gt;")
-    .replace(/\"/g, "&quot;")
+    .replace(/"/g, "&quot;")
     .replace(/'/g, "&#039;");
 }
 
