--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@ function handleContact(e){
   e.preventDefault();
   const s = encodeURIComponent(document.getElementById('subject').value || '');
   const b = encodeURIComponent(document.getElementById('message').value || '');
-  location.href = `mailto:gustavopinho.maia@mnhn.fr?subject=${s}&body=${b}`;
+  location.href = `mailto:gustavopinhomaia@gmail.com?subject=${s}&body=${b}`;
   return false;
 }
 </script>
