--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@ async function loadSections() {
     }
   }
 
-  // ✅ Initialize exactly once, after all sections are loaded
+  // Initialize exactly once, after all sections are loaded
   initializeScripts();
 }
 
 loadSections();
 </script>
+
 </body>
 </html>
