--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="script.js"></script>
 <script>
 async function loadSections() {
-  const sections = ['hero', 'research', 'education', 'experience', 'publications', 'tutoring'];
+  const sections = ['hero', 'research', 'education', 'experience', 'experiments', 'publications', 'tutoring'];
   const content = document.getElementById('content');
 
   for (const section of sections) {
