--- a/sections/experience.html
+++ b/sections/experience.html
@@ -29,15 +29,13 @@
         <img src="images/logos/nasa.png" alt="NASA Goddard logo" class="org-logo">
         <div class="timeline-title">
           <strong>Visiting Scientist</strong>
-          <div class="meta">
-            Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA
-          </div>
+          <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
         </div>
       </div>
     </div>
     <div class="timeline-expand">
       <div class="expand-body">
-        <p>This study investigated the influence of mechanochemical processeson the extraction and recovery of organic compounds from extraterrestrial materials. Controlled mechanical activation techniques were applied to evaluate their effects on extraction efficiency, molecular integrity, and degradation pathways.</p>
+        <p>This study investigated the influence of mechanochemical processes on the extraction and recovery of organic compounds from extraterrestrial materials. Controlled mechanical activation techniques were applied to evaluate their effects on extraction efficiency, molecular integrity, and degradation pathways.</p>
         <p>Particular attention was given to understanding how mechanical forces impact sensitive organic molecules during sample preparation. In parallel, extensive experience was gained in the development, optimisation, and application of high-performance liquid chromatography–mass spectrometry (HPLC–MS).</p>
         <p>Chromatographic conditions, ionisation parameters, and mass spectrometric settings were systematically optimised to enhance detection and characterisation of complex organic mixtures. The project involved routine operation, troubleshooting, and refinement for reliable identification of low-abundance compounds.</p>
         <div class="expand-gallery">
@@ -48,6 +46,194 @@
     </div>
   </div>
   
-  <!-- Add other experience items here (they would continue similarly) -->
+  <!-- 3 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ist.png" alt="Instituto Superior Técnico">
+        <div>
+          <strong>Invited Assistant (University Teacher)</strong>
+          <div class="meta">Sep 2024 – Oct 2024 · Instituto Superior Técnico, Portugal</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>As a Guest Teaching Assistant, I delivered and supervised practical laboratory sessions in General Chemistry for first-year undergraduate students in Aerospace Engineering. The practical lectures were designed to reinforce core chemical concepts through hands‑on experimentation, with a strong emphasis on laboratory safety, experimental rigour, and data interpretation.</p>
+        <p>The practical sessions covered fundamental topics, including solubility and miscibility, UV–visible spectroscopy, chemical reaction kinetics, and corrosion processes, supporting students in experimental design, data analysis, and scientific reporting.</p>
+        <div class="expand-gallery">
+          <img src="images/tecnico.png" alt="" style="margin-top:10px; display:block; margin-left:auto; margin-right:auto;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 4 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/aneq.png" alt="ANEQ">
+        <div>
+          <strong>President of the Fiscal Council</strong>
+          <div class="meta">Jun 2021 – May 2022 · ANEQ, Portugal</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Oversaw fiscal compliance, audited financial statements, and coordinated council meetings.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/aneq1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 5 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/aneq.png" alt="ANEQ">
+        <div>
+          <strong>Vice President</strong>
+          <div class="meta">Jun 2020 – Jun 2021 · ANEQ, Portugal</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Assisted the president and managed organizational activities for student chemistry association.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/aneq2.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 6 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+        <div>
+          <strong>Vice-President — UBIQUÍMICA</strong>
+          <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Managed student projects, coordinated events, and facilitated communication between members.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/ubiquimica1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 7 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="Universidade da Beira Interior">
+        <div>
+          <strong>Research Intern</strong>
+          <div class="meta">Jul 2020 – Sep 2020 · Universidade da Beira Interior</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Conducted laboratory research on chemical synthesis under supervision of faculty researchers.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/ubi1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 8 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="Universidade da Beira Interior">
+        <div>
+          <strong>Delegate of Industrial Chemistry Students</strong>
+          <div class="meta">Oct 2019 – Sep 2020 · Universidade da Beira Interior</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Represented the student body, conveyed concerns, and organized class activities and discussions.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/ubi2.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 9 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/nestle.png" alt="Nestlé Portugal">
+        <div>
+          <strong>Factory Worker</strong>
+          <div class="meta">Aug 2019 – Sep 2019 · Nestlé Portugal</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Performed operational tasks in the production line, quality control, and packaging processes.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/nestle1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 10 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+        <div>
+          <strong>Scientific Committee Member — UBIQUÍMICA</strong>
+          <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Reviewed student projects and contributed to planning of academic events and workshops.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/ubiquimica2.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 11 -->
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ramada.png" alt="Ramada Aços">
+        <div>
+          <strong>Professional Internship</strong>
+          <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A.</div>
+        </div>
+      </div>
+    </div>
+    <div class="timeline-expand">
+      <div class="expand-body">
+        <p>Gained practical experience in industrial processes, safety procedures, and workflow optimization.</p>
+        <div class="expand-gallery">
+          <img src="images/experiences/ramada1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </section>
