--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
   // Include experiments in the loader
-  const sections = ['hero', 'research', 'education', 'experiences', 'publications', 'tutoring'];
+  const sections = ['hero', 'research', 'education', 'experience', 'publications', 'tutoring'];
   const content = document.getElementById('content');
 
   for (const section of sections) {
